Début de rédaction de la classe main